Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9941,7 +9941,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200221191922866" list="[[UCLA Math 121 Topology]] [[Topological Spaces]] [[Continuous Functions in Topological Spaces]] Welcome [[How to Contribute?]]" modified="20200221191926098" title="$:/StoryList" revision="6" bag="default">
+<div created="20200221191922866" list="[[UCLA Math 121 Topology]] [[Topological Spaces]] [[Continuous Functions in Topological Spaces]] Welcome [[How to Contribute?]]" modified="20200221191926098" title="$:/StoryList" revision="8" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10002,8 +10002,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200221191919756" modified="20200221191921986" title="$:/temp/search" revision="7" bag="default">
-<pre>121</pre>
+<div created="20200221191919756" modified="20200221192245614" title="$:/temp/search" revision="8" bag="default">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -11072,7 +11072,7 @@ Def: A function f from one metric space to another is a homeomorphism if f is bi
 
 Fact: A homeomorphism preserves all properties of a metric space that are definable in terms of open sets only. </pre>
 </div>
-<div created="20200219043249498" modified="20200221191939243" tags="topology" title="Continuous Functions in Topological Spaces" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200219043249498" modified="20200221192242405" tags="topology" title="Continuous Functions in Topological Spaces" type="text/vnd.tiddlywiki" revision="2" bag="default">
 <pre>Def (Uniform Continuity): A function f from one topological space X to another Y is continuous if $$f^{-1}(V)$$ is open in X whenever V is open in Y
 
 Def: A continuous function from one topological space to another is often called a map.
@@ -11113,7 +11113,7 @@ Thm 4: Suppose the sequence of functions $${\{f_n\}}_{n \in \textbf{N}}$$ from a
 
 Proof:
 
-* Fix $$\epsilon &gt; 0$$, fix N s.t $$d(f_N(y), f(y)) &lt; \epsilon / 3, \forall y \in X$$, since $$f_N$$ is continuous at x, $$\exists$$ open neighborhood of U of x s.t. $$f(U)$$ is a subset of the $$\epsilon / 3$$ ball around $$f_N(x)$$
+* Fix $$\epsilon &gt; 0$$, fix N s.t $$d(f_N(y), f(y)) &lt; \epsilon / 3, \forall y \in X$$, since $$f_N$$ is continuous at x, $$\exists$$ open neighborhood of U of x s.t. $$f_N(U)$$ is a subset of the $$\epsilon / 3$$ ball around $$f_N(x)$$
 * Then $$\forall y \in U$$, $$d(f(y), f(x)) \leq d(f(y), f_N(y)) + d(f_N(y), f_N(x)) + d(f_N(x), f(x)) &lt; \epsilon$$
 * Therefore, by theorem 3, f is point-wise continuous at $$x \in X$$
 
